<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nglaw.xmlparker.search_act">

    <EditText
        android:id="@+id/destinationAddress"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/destinationAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Destination Address"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/destinationAddress"
        app:layout_constraintBottom_toBottomOf="@+id/destinationAddress"
        app:layout_constraintTop_toTopOf="@+id/destinationAddress" />

    <EditText
        android:id="@+id/destinationCity"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/destinationAddress"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/destinationCityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Destination City"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/destinationCity"
        app:layout_constraintBottom_toBottomOf="@+id/destinationCity"
        app:layout_constraintTop_toTopOf="@+id/destinationCity" />

    <EditText
        android:id="@+id/destinationZipCode"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/destinationCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/destinationZipCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Destination Zip Code"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/destinationZipCode"
        app:layout_constraintBottom_toBottomOf="@+id/destinationZipCode"
        app:layout_constraintTop_toTopOf="@+id/destinationZipCode" />

    <EditText
        android:id="@+id/timeOpen"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/destinationZipCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/dateOpen"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeOpen"/>

    <TextView
        android:id="@+id/dateOpenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date Open MM/DD/YY"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/dateOpen"
        app:layout_constraintBottom_toBottomOf="@+id/dateOpen"
        app:layout_constraintTop_toTopOf="@+id/dateOpen" />


    <TextView
        android:id="@+id/timeOpenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Open(hh:mm am/pm)"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/timeOpen"
        app:layout_constraintBottom_toBottomOf="@+id/timeOpen"
        app:layout_constraintTop_toTopOf="@+id/timeOpen" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dateOpen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
