...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="22dp"
        />

    <Button
        android:id="@+id/parkingSpotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I want that spot!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
...
